# swd-store

./: .env.example  .gitignore  README.md  frontend-critic.skill  pyproject.toml
config/: settings.py  urls.py
core/: admin.py  admin_config.py  apps.py  forms.py  helper.py  middleware.py  models.py  urls.py  views.py
core/analytics/: ingest.py  parser.py  views.py
core/management/commands/: compress_existing_images.py  ingest_access_logs.py
core/templates/admin/: analytics.html
core/templates/core/: 404.html  429.html  500.html  about.html  add_product.html  base.html  categories.html  debug_sign_in.html  feedback.html  home.html  item_detail.html  my_listings.html  sign_in.html  terms.html
static/js/: main.js
