[project]
name = "swd-store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.2",
    "django-ratelimit>=4.1.0",
    "django-ses>=4.7.2",
    "google-auth>=2.48.0",
    "gunicorn>=25.1.0",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "user-agents>=2.2.0",
]
